<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_height="fill_parent" android:id="@+id/configuracionLayout" android:layout_width="500dp">
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/unidadesLayout" android:layout_marginLeft="10dp" android:layout_marginTop="10dp">
        <TextView android:id="@+id/textView1" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:text="@string/lblUnidades" android:layout_height="wrap_content"></TextView>
        <RadioGroup android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/radioGroup1" android:orientation="horizontal">
            <RadioButton android:layout_height="wrap_content" android:layout_width="wrap_content" android:checked="true" android:text="@string/lblKilos" android:id="@+id/rbtnKilos"></RadioButton>
            <RadioButton android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/lblLibras" android:id="@+id/rbtnLibras"></RadioButton>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/volumenLayout" android:layout_marginLeft="10dp">
        <TextView android:id="@+id/textView2" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lblVolumen"></TextView>
        <SeekBar android:id="@+id/seekBar1" android:layout_height="wrap_content" android:layout_width="159dp"></SeekBar>
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/autoplayLayout" android:layout_marginTop="25dp" android:layout_marginLeft="10dp">
        <TextView android:id="@+id/textView3" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lblAutoplay"></TextView>
        <ToggleButton android:layout_gravity="center_horizontal" android:text="@string/lblAutoplay" android:id="@+id/tbtnAutoplay" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textOn="@string/lblOn" android:textOff="@string/lblOff"></ToggleButton>
    </LinearLayout>
    
</LinearLayout>
