<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:id="@+id/agregarPerfilLayout" android:layout_marginLeft="10dp">
    <LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/nombreLayout" android:layout_marginTop="10dp" android:layout_marginLeft="10dp">
        <TextView android:id="@+id/textView1" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lblNombre"></TextView>
        <EditText android:layout_weight="1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:inputType="textPersonName" android:id="@+id/etNombre">
            <requestFocus></requestFocus>
        </EditText>
    </LinearLayout>
    <TextView android:id="@+id/textView2" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lblFechaNac" android:layout_marginTop="10dp" android:layout_marginLeft="10dp"></TextView>
    <DatePicker android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/dpFechaNac" android:layout_gravity="center_horizontal"></DatePicker>
    <LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:layout_marginTop="10dp" android:id="@+id/estatura_pesoLayout" android:layout_marginLeft="10dp">
        <TextView android:id="@+id/textView3" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lblEstatura"></TextView>
        <EditText android:layout_weight="1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:inputType="numberDecimal" android:id="@+id/etEstatura" android:layout_marginRight="10dp" android:text="0.0" android:maxWidth="50dp"></EditText>
        <TextView android:text="@string/lblPeso" android:id="@+id/textView4" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
        <EditText android:layout_weight="1" android:inputType="numberDecimal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/etPeso" android:text="0.0" android:maxWidth="50dp"></EditText>
    </LinearLayout>
    <TextView android:text="@string/lblObjetivo" android:id="@+id/textView5" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_marginLeft="10dp"></TextView>
    <Spinner android:layout_weight="1" android:id="@+id/spObjetivo" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_marginLeft="10dp"></Spinner>
    <Button android:text="@string/lblListo" android:id="@+id/btnListo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_gravity="center_horizontal"></Button>
    <TextView android:text="@string/lblObligatorios" android:id="@+id/textView6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginTop="50dp"></TextView>
    
</LinearLayout>
